2007-12-01  Jim Meyering  <meyering@redhat.com>

	* posix/regcomp.c (optimize_utf8): Fix a typo, s/idx/ctx_type/,
	that would inhibit utf8-optimization of a regexp containing line-
	or buffer-anchors, e.g., `^', `$'.

2007-12-12  Ulrich Drepper  <drepper@redhat.com>

	* time/bug-getdate1.c (do_test): Don't use century values which
	aren't valid on 32-bit systems.

2007-12-12  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/i386/i486/bits/string.h (memmove): Define as macro.
	(memmove): Rename to __memmove_g, with __asm__ ("memmove").
	* sysdeps/s390/bits/string.h (__strlen_g, __strcpy_g, __strncpy_g,
	__strcat_g, __strncat_g): Add __asm__.

2007-12-12  Ulrich Drepper  <drepper@redhat.com>

	[BZ #5477]
	* io/fchmodat.c: Fix typo in stub_warning use.
	Patch by Petr Salinger.

2007-12-11  Ulrich Drepper  <drepper@redhat.com>

	* iconvdata/hp-thai8.c: New file.
	* iconvdata/Makefile: Add rules for hp-thai8.c.
	* iconvdata/tst-tables.sh: Add entry for HP-THAI8.
	* iconvdata/gconv-modules: Likewise.

	[BZ #5464]
	* iconvdata/hp-greek8.c: New file.
	* iconvdata/Makefile: Add rules for hp-greek8.c.
	* iconvdata/tst-tables.sh: Add entry for HP-GREEK8.
	* iconvdata/gconv-modules: Likewise.

	[BZ #5463]
	* iconvdata/hp-turkish8.c: New file.
	* iconvdata/Makefile: Add rules for hp-turkish8.c.
	* iconvdata/tst-tables.sh: Add entry for HP-TURKISH8.
	* iconvdata/gconv-modules: Likewise.

	* malloc/arena.c (grow_heap): Split out code to shrink heap into...
	(shrink_heap): ... this new function.
	(heap_trim): Call shrink_heap instead of grow_heap.

	* malloc/malloc.c (_int_malloc): sYSMALLOc might fail, in this
	case don't call alloc_perturb.

2007-12-10  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/adjtime.c: Use ADJ_OFFSET_SS_READ if
	possible.
	* sysdeps/unix/sysv/linux/kernel-features.h
	(__ASSUME_ADJ_OFFSET_SS_READ): Define for 2.6.24.
	* sysdeps/unix/sysv/linux/sys/timex.h (ADJ_OFFSET_SS_READ): Define.

2007-12-08  Ulrich Drepper  <drepper@redhat.com>
